--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   easy_extension:
     git:
       url: https://github.com/scadasystems/Easy-Extension.git
-
+  file_picker: ^8.1.3
   flex_color_scheme: ^7.3.1
   http:
   shared_preferences: ^2.3.2
