--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   # NOTE: Assets
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  lucide_icons_flutter: ^1.2.3
 
   # NOTE: Core
   easy_extension:
@@ -25,6 +26,8 @@ dependencies:
   shared_preferences: ^2.3.2
   get: ^4.6.6
   go_router: ^14.2.8
+  http_parser:
+  mime: ^2.0.0
 
   # NOTE: UI/UX
 dev_dependencies:
