--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   get: ^4.6.6
   go_router: ^14.2.8
   http_parser:
-  mime: ^2.0.0
+  mime: ^1.0.2
+  supabase_flutter: ^2.8.1
 
   # NOTE: UI/UX
 dev_dependencies:
